# dm

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
locales/: en.yml  zh-CN.yml
src/: cmd.rs  config.rs  env.rs  error.rs  group_cfg.rs  hook.rs  info.rs  lib.rs  local.rs  lock.rs  main.rs  platform.rs  tempfile.rs  ui.rs  uicli.rs  util.rs
src/cache/: mod.rs
src/cfg/: file.rs  global.rs  group.rs  mod.rs  transaction.rs  transcation.rs
src/checker/: mod.rs
src/cmd/: group.rs  mod.rs
src/healthcheck/: mod.rs
src/local/: db.rs  file.rs  group.rs  mod.rs  profile.rs  updater.rs
src/storage/: file.rs  mod.rs
src/task/: mod.rs
src/ui/: cli.rs  mod.rs
tui/: Cargo.toml
