[package]
name = "dm"
version = "0.1.0"
edition = "2021"
description = "Yet another powerful dotfiles manager written in Rust"
license = "agpl3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# git2 = "0.14"
tui = "0.19.0"
clap = { version = "4.0.29", features = ["derive"] }
tokio = "1.23.0"
toml = "0.5.10"
