[package]
name = "koakuma"
version = "0.1.0"
edition = "2021"
authors = ["mslxl <i@mslxl.com>"]
description = "Let Koakuma to helps you to manage dotfiles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.76"
directories = "5.0.1"
miette = { version = "5.10.0", features = ["fancy"] }
serde = "1.0.193"
thiserror = "1.0.53"
tokio = {version = "1.35.1", features = ["tokio-macros", "io-std", "io-util", "fs", "libc", "bytes"]}
toml = "0.8.8"
